# quickpoeter_core

./: Cargo.toml  README.md
config/: coefficients.yaml  convertation.yaml  fields.yaml
src/: api.rs  finder.rs  lib.rs  main.rs  meaner.rs  reader.rs  tests.rs  translator_ru.rs  translator_struct.rs
